# CNEFinder

./: CMakeLists.txt  INSTALL  Makefile  Makefile_M  README.md  alt_extend.cc  cnef.cc  cnef.h  extend.cc  mim.cc  mim.h  overlaps.cc  pre-install.sh  qgrams.cc  score.cc  utils.cc
Experiments/Exp1/: 1000  1012  1017  1021  1022  1026  1029  1031  104  1042  1047  1051  1055  106  1065  1067  1069  108  1082  1086  1087  1090  1097  1098  1100  1102  1103  1106  1109  1111  1116  1117  1119  1121  1129  113  1130  1138  1141  1143  (+519 more)
Experiments/Exp2/: 1  1003  1008  1010  1011  102  1023  1025  1027  103  1032  1033  1041  1043  1044  1045  1061  1062  1064  1070  1071  1073  1077  1078  1080  1083  1093  1095  1096  11  1105  1107  1108  1110  1114  1118  1126  1128  1133  1135  (+433 more)
Experiments/Exp3/: YASS_comparison  yass_output
Experiments/Files/: galGal4_exons  galGal4_genes  hg38_genes
